--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div id="sideBar1" class="sidebar">
             <span class="close-btn" onclick="closeSidebar()" role="button" aria-label="Close sidebar">✖</span>
             <h1 class="título">Mexican shabat (2023 - 2024)</h1>
-            <button class="context-button" onclick="mostrarOcultar('context1')">▶ Context</button>
+            <button class="context-button" onclick="showHideContent('context1')">▶ Context</button>
             <div id="context1" class="context">                
                 <p class="info-text-projects">This project is an attempt to relate the practice of Shabbat with modern work rest.</p>
                 <p class="info-text-projects">I was struck by the fact that work rest, seen as a ritual, contains almost all the characteristics of Shabbat or shares many similarities; what's different here is the purpose.</p>
@@ -84,7 +84,7 @@
         <div id="sideBar2" class="sidebar">
             <span class="close-btn" onclick="closeSidebar()" role="button" aria-label="Close sidebar">✖</span>
             <h1 class="título">Post-mexican shabat (2024)</h1>
-            <button class="context-button" onclick="mostrarOcultar('context2')">▶ Context</button>
+            <button class="context-button" onclick="showHideContent('context2')">▶ Context</button>
             <div id="context2" class="context">
                 <p class="info-text-projects">Unemployed, I decided to move the initial project from the realm of rest days to the absence of workdays, portraying leisure.</p>
                 <p class="info-text-projects">For three months I took photographs whenever I felt like it, just seeking to create images from my free time.</p>
@@ -113,8 +113,8 @@
                         <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1738881677/IMG_8188-3_d90h2u.jpg" alt="amorsito">
                     </div>
                 </div>
-                <button class="nav-arrow left-arrow">◀</button>
-                <button class="nav-arrow right-arrow">▶</button>
+                <button class="nav-arrow left-arrow" onclick="prevSlide()">&#9664;</button>
+                <button class="nav-arrow right-arrow" onclick="nextSlide()">&#9654;</button>
             </div>
         </div>
 
@@ -124,7 +124,7 @@
             <div class="slider-container">
                 <div class="slider">
                     <div class="slide">
-                        <iframe title="vimeo-player" src="https://player.vimeo.com/video/1071944658?h=d586018ee0" style="width: 100%; height: 100%;" frameborder="0" allowfullscreen></iframe> 
+                        <iframe title="vimeo-player" src="https://player.vimeo.com/video/1071944658?h=d586018ee0" style="width: 100%; height: 100%;" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -133,12 +133,48 @@
         <div id="sideBar4" class="sidebar">
             <span class="close-btn" onclick="closeSidebar()" role="button" aria-label="Close sidebar">✖</span>
             <h1 class="título">Campaña contra el dengue (2024)</h1>
+            <button class="context-button" onclick="showHideContent('context4')">▶ Context</button>
+            <div id="context4" class="context">
+                <p class="info-text-projects">¿En qué consiste se depredador? Dominar un espacio del ambiente.</p>
+                <p class="info-text-projects">Al estar delimitados por materia, tanto en cuerpo como en mundo, el espacio es el único lugar donde se entienden y desentienden los seres vivos. 
+                    Durante este episodio de mi vida, me sentí discretamente invadido. Mi departamento se llenaba de mosquitos después de las siete de la noche; el zumbido de las alas dentro de mis oídos anunciaba el inicio del acecho. 
+                    Interrumpían mi sueño, mi cuerpo sufría una invasión de ronchas silenciosas. Empecé a entablar una relación con el insecto. Creamos un vínculo real, uno eterno. Mi sangre por la suya -que es la mía.
+                </p>
+                <p class="info-text-projects">El baño era su escondite. Cuando despertaba furioso por no haber dormido, me encerraba en este, imposibilitaba cualquier tipo de escapatoria para los moyotes que dormían plácidamente por doquier: debajo del lavabo, pegados al techo, 
+                    entre las cortinas de baño y los despertaba azotando mis palmas abiertas contra sus diminutos cuerpos, alborotaba el zancudero. Volaban en masa por todas partes. En un mal día para ellos y bueno para mí cometía masacres. 
+                    Las sangre en mis manos me hacían sentir un animal. Inventé mecanismos para matarlos. Mi favorito era mojarme la mano y agitarla suavemente en el aire. 
+                    Al parecer el agua y los mosquitos se llevan muy bien, se adhieren con facilidad a ella.
+                </p>
+                <p class="info-text-projects">
+                    En honor a sus muertes, estampé sus diminutos y delgados cuerpos en una pared de mi departamento. Ahí yacen los cientos de cuerpos de mosquitos que aniquilé, junto a mi sangre y la sangre de mi novia
+                </p>
+            </div>
             <div class="slider-container">          
                 <div class="slider">
                     <div class="slide">
-                        <iframe title="vimeo-player" src="https://player.vimeo.com/video/1071944658?h=d586018ee0" style="width: 100%; height: 100%;" frameborder="0" allowfullscreen></iframe> 
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744061664/IMG_0016-2_i87cql.jpg" alt="Campaña contra el dengue"> 
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744062977/IMG_0025_pd27qi.jpg" alt="Campaña contra el dengue">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744061666/IMG_0031_krwmok.jpg" alt="Campaña contra el dengue">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744061670/IMG_0059-3_btdfci.jpg" alt="Campaña contra el dengue">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744062743/IMG_0062_lfnvhv.jpg" alt="Campaña contra el dengue">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744061928/IMG_0071_ajv06n.jpg" alt="Campaña contra el dengue">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744061925/IMG_0078-2_vw1zqh.jpg " alt="Campaña contra el dengue">
                     </div>
                 </div>
+                <button class="nav-arrow left-arrow" onclick="prevSlide()">&#9664;</button>
+                <button class="nav-arrow right-arrow" onclick="nextSlide()">&#9654;</button>
             </div>
         </div>
 
@@ -150,6 +186,16 @@
             <p class="info-text-space">alberto.gonzalezh11@gmail.com</p>
         </div>
     </main>
+
+    <div id="lightbox" class="lightbox">
+        <span class="lightbox-close">✖</span>
+        <img id="lightbox-img" src="" alt="">
+        <div class="zoom-controls">
+            <button class="zoom-btn" id="zoom-in">+</button>
+            <button class="zoom-btn" id="zoom-out">-</button>
+            <button class="zoom-btn" id="zoom-reset">Reset</button>
+        </div>
+    </div>
 
     <script src="sidebar.js"></script>
 </body>
