Design update: adjustments for vertical images and spacing

--- a/index.html
+++ b/index.html
@@ -73,8 +73,34 @@
                     </div>
                     <div class="slide">
                         <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1738880049/H1290033_ukbyco.jpg" alt="plastic wearing">
-
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1738880051/H1360011_tiaqmj.jpg" alt="kissin birds tee">
                     </div>   
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1738880049/H1270127_ntxqt9.jpg" alt="wind in her hair">
+                    </div>   
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744406238/DSC00928_keprlo.jpg" alt="semen sobre bola de cabello">
+                    </div>   
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744406438/H1550001_miczi9.jpg" alt="el final está cerca">
+                    </div>   
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744406524/H1480056_zvjbsa.jpg" alt="pájaro volteao">
+                    </div>   
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744406553/H1470087_hu5ctr.jpg" alt="mi papá toca el acordeón">
+                    </div>   
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744406561/H1470081_pkm00t.jpg" alt="comiendo pitufos">
+                    </div>   
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744406585/H1230019_uzfjsq.jpg" alt="comiendo pitufos 2">
+                    </div>   
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1744406586/H1230018_lcyzim.jpg" alt="walking the plastic unicorn">
+                    </div>    
                 </div>
                 <button class="nav-arrow left-arrow" onclick="prevSlide()">&#9664;</button>
                 <button class="nav-arrow right-arrow" onclick="nextSlide()">&#9654;</button>    
@@ -111,6 +137,36 @@
                     </div> 
                     <div class="slide">
                         <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1738881677/IMG_8188-3_d90h2u.jpg" alt="amorsito">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1738881674/ScanImage429972_r73410.jpg" alt="split">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1742507496/ScanImage429977-2_pzmyuy.jpg" alt="who took a bath?">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1742507763/Film_11_nsjbm4.jpg" alt="nature healing">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1742507496/ScanImage429971-2_swwulm.jpg" alt="stone face">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1742507757/Film_34_kczov6.jpg" alt="expired film">
+                    </div>
+                    <div class="slide">
+                        <img class="vertical" src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1738881666/IMG_2918_bhebtv.jpg" alt="corona con gusanos">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1738881677/ScanImage429998_hstim4.jpg" alt="bolsas de té">
+                    </div>
+                    <div class="slide">
+                        <img class="vertical" src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1738881672/ScanImage429982_d54wkq.jpg" alt="nahúm">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1738881672/IMG_1509-4_flit6s.jpg" alt="el bebé del frasco">
+                    </div>
+                    <div class="slide">
+                        <img src="https://res.cloudinary.com/dn8nqjilv/image/upload/v1742507759/Film_27-2_wfrjfq.jpg" alt="carne asada">
                     </div>
                 </div>
                 <button class="nav-arrow left-arrow" onclick="prevSlide()">&#9664;</button>
